update answer model
