# docs/swagger.yaml
@@ -26,6 +26,9 @@ definitions:
         type: string
       id:
         type: integer
+      question_group_id:
+        description: Bộ câu hỏi tương ứng
+        type: integer
       score_anxiety_max:
         type: integer
       score_anxiety_min:
@@ -76,6 +79,8 @@ definitions:
       newUser:
         type: string
       phone:
+        type: string
+      real_name:
         type: string
       userId:
         type: integer
@@ -304,7 +309,7 @@ paths:
       consumes:
       - application/json
       description: |-
-        input: ScoreStress, ScoreDepress, ScoreAnxiety => output: struct judge-advice
+        input: ScoreStress, ScoreDepress, ScoreAnxiety, questionGroup => output: struct judge-advice.  If questionGroup = 2 => Test PQH-9
         WARNING: ALl the score must be greater than 1 and less than 10
       parameters:
       - description: score_Stress
@@ -320,6 +325,11 @@ paths:
       - description: score_anxiety
         in: query
         name: score_anxiety
+        required: true
+        type: integer
+      - description: group_question
+        in: query
+        name: group_question
         required: true
         type: integer
       produces:
